# filament

./: .gitignore  404.html  CNAME  Cargo.toml  Dockerfile  LICENSE  README.md  book.toml  dump.fil  fft.fil  fft.sv  fil_conf.toml  hm.py  index.html  opt.json  print.html  rewrite.md  robots.txt  runt.toml  schedule.fil  searchindex.js  searchindex.json  sitemap.xml  slangtest.dockerfile  start.html  tech.toml  tech.yml  test.fil  test.txt  test_output_samples.csv  tmp.fil  xls.ir  xls.opt.ir  xls.v
.devcontainer/: devcontainer.json
.github/version/: iverilog
.github/workflows/: depot.yml  docs.yml  format.yml  ir.yml  test.yml
aetherling/: README.md
aetherling/chisel-conv-16/: conv2d_real_16.sv  device.xdc
aetherling/common/: conv2d-interface.fil  fast-interface.fil  slow-interface.fil
aetherling/conv2d_1/: impl.v  shim.fil
aetherling/conv2d_144/: shim.fil
aetherling/conv2d_16/: shim.fil
aetherling/conv2d_2/: shim.fil
aetherling/conv2d_4/: shim.fil
aetherling/conv2d_48/: shim.fil
aetherling/conv2d_8/: impl.v  shim.fil
aetherling/data/: conv2d_8.json
aetherling/filament/: conv2d.fil  conv2d_1.fil  conv2d_144.fil  conv2d_16.fil  conv2d_2.fil  conv2d_4.fil  conv2d_48.fil  conv2d_8.fil  data.json  device.xdc  (+6 more)
apps/: Dockerfile
book/: index.html  print.html  searchindex.json
crates/ast/: Cargo.toml
crates/ast/src/: attribute.rs  bind_map.rs  component.rs  constraint.rs  control.rs  expr.rs  implication.rs  interval.rs  lib.rs  parser.rs  port.rs  signature.rs  syntax.pest  time.rs
crates/filament/: Cargo.toml
crates/filament/src/: cmdline.rs  lib.rs  macros.rs  main.rs  resolver.rs
crates/filament/src/ast_passes/: desugar_conditionals.rs  desugar_unknowns.rs  mod.rs  scheduling_model.rs  toplevel.rs  unused_elements.rs
crates/filament/src/ast_visitor/: mod.rs  visitor.rs
crates/filament/src/ir_comp_visitor/: comp.rs  mod.rs  visitor.rs
crates/filament/src/ir_passes/: assignment_check.rs  assume.rs  assumptions.rs  build_domination.rs  bundle_elim.rs  discharge.rs  dump_interface.rs  fsm_attributes.rs  fun_assumptions.rs  infer_assumes.rs  interval_check.rs  mod.rs  port_delays.rs  prop_simplify.rs  schedule.rs  type_check.rs
crates/filament/src/ir_passes/lower/: build_ctx.rs  compile.rs  fsm.rs  mod.rs  utils.rs
crates/filament/src/ir_passes/mono/: concretize.rs  mappings.rs  mod.rs  monodeferred.rs  monomorphize.rs  monosig.rs  param_resolver.rs
crates/filament/src/ir_passes/mono/utils/: base.rs  comp.rs  mod.rs
crates/filament/src/ir_passes/schedule/: combinational_paths.rs  mod.rs  pass.rs  register.rs  register.sv  retime.rs  schedule.sv  solve.rs
crates/filament/src/ir_visitor/: visitor.rs
crates/filament/src/utils/: hoist_facts.rs
crates/utils/: Cargo.toml
crates/utils/src/: attribute.rs  errors.rs  global_sym.rs  gsym.rs  lib.rs  macros.rs  math.rs  pool.rs  position.rs  reporter.rs
crates/utils/src/attr/: attributes.rs  ctx.rs  mod.rs  store.rs  types.rs
css/: default.css  prism.css
doc/: book.toml
docs/: 404.html  SUMMARY.md  index.html  print.html  searchindex.js  searchindex.json  start.html  start.md  toc.html  toc.js
examples/: data.json  sequential.fil  tut-pipe-wrong-1.expect  tut-pipe-wrong-1.fil  tut-pipe-wrong-2.expect  tut-pipe-wrong-2.fil  tut-pipe-wrong-3.expect  tut-pipe-wrong-3.fil  tut-pipe.fil  tut-seq.fil  tut-wrong-1.expect  tut-wrong-1.fil  tut-wrong-2.expect  tut-wrong-2.fil
fil-ast/: Cargo.toml
fil-ast/src/: component.rs  control.rs  expr.rs  lib.rs  loc.rs  parser.rs  signature.rs  syntax.pest  time.rs
fil-derive/: Cargo.toml
fil-gen/: Cargo.toml  manifest.toml
fil-gen/src/: cmdline.rs  config_schema.rs  exec.rs  lib.rs  main.rs  tool_schema.rs
fil-gen/tools/: flopoco.fil  flopoco.toml
fil-ir/: Cargo.toml
fil-ir/src/: comp.rs  context.rs  control.rs  ctx.rs  expr.rs  fact.rs  idxs.rs  info.rs  lib.rs  source_info.rs  structure.rs  subst.rs  time.rs  validate.rs
fil-ir/src/from_ast/: astconv.rs  build_ctx.rs  sig_map.rs
fil-ir/src/printer/: comp.rs  display_ctx.rs  expr.rs  prop.rs
fil-ir/src/utils/: dense_info.rs  foreign.rs  idx.rs  index_store.rs  interned.rs  mod.rs  subst.rs  traversal.rs
fil-utils/: Cargo.toml
fil-utils/src/: id.rs  lib.rs  math.rs  reporter.rs
fp-adder/: fp-add-nopipe.sv  fp-add.fil  fp-add.sv  gen-float.py  gen_float.py
frisc/: README.md
fud/: cocotb.py  filament.py
gen-out/: xls.ir  xls.opt.ir  xls.x
hand-compile/: mult-duplex.fil  mult-duplex.futil  mult.sv  out.futil  tb.sv
lang/: external.html  pipelining.html  run.html  tutorial.html
meta/: loops-and-bundles.html  overview.html
paper/: .gitignore  Makefile  Makefile.include  README.md  acmart.cls  build.sh  filament.tex  notes.md  ottalt.sty  pervasives.sty  types.ott  xxx.sty
pipelinec/: harness.fil
playground/: fft.md
primitives/: binary.sv  comb.fil  comb.sv  compile.fil  core.fil  core.sv  fixed.fil  fixed.sv  float.fil  fp-support.fil  fp-support.sv  math.fil  memories.fil  memories.sv  merge.fil  merge.sv  param-funcs.fil  reshape.fil  reshape.sv  sequential.fil  signed.fil  signed.sv  state.fil  state.sv  stencil.fil  unsynthesizable.fil  unsynthesizable.sv
reticle/: check.sh  data.json  harness.expect  harness.fil  synth-harness.fil  tdot.fil  tdot.v  unisim.v
scratch/: hello_xls.x
scripts/: extract-sigs.py  figures.ipynb
sec2-scratch/: .gitignore  alu_li_tb  alu_li_tb.sv  compute.sv  dynamic-alu.sv  math.sv  static-alu.sv  streams-data.json  test_shift_register.sv  timing_analyzer.py
src/: bind_check.rs  bind_map.rs  cmdline.rs  dump_interface.rs  errors.rs  expr_simplifier.rs  interface_infer.rs  lib.rs  lower.rs  macros.rs  main.rs  max_states.rs  monomorphize.rs  phantom_check.rs  resolver.rs  share.fil
tests/: add-mult.expect  add-mult.fil  external.expect  external.fil  guards.expect  guards.fil  low-level-invoke.fil  lowered.expect  lowered.fil  max.expect  max.fil  merge.expect  merge.fil  mult-chain.expect  mult-chain.fil  par.expect  par.fil  pipe.fil  when.expect  when.fil
web/: .gitignore  LICENSE.md  README.md  config.toml
(+1414 files in other folders)
