[workspace]
members = ["fil-derive", "fil-utils", "fil-ast", "fil-ir"]

[workspace.package]
authors = ["The Filament Team"]
license-file = "LICENSE"
keywords = ["hdl", "hardware design"]
repository = "https://github.com/cucapra/filament"
readme = "README.md"
description = "A language for Fearless Hardware Design"
categories = ["compilers"]
homepage = "https://filamenthdl.com"
edition = "2021"
version = "0.1.0"
rust-version = "1.67"

[workspace.dependencies]
argh = "0.1"
log = "0.4"
pest = "2.1"
pest_consume = "1.1"
pest_derive = "2.1"
linked_hash_set = "0.1"
itertools = "0.10"
linked-hash-map = "0.5"
derivative = "2.2"
smallvec = "1"
topological-sort = "0.2"
atty = "0.2"
lazy_static = "1.4"
easy-smt = { version = "0.2.0", path = "../easy-smt" }
struct-variant = "1.0"

fil-utils = { version = "0.1.0", path = "fil-utils" }
fil-ast = { version = "0.1.0", path = "fil-ast" }
fil-ir = { version = "0.1.0", path = "fil-ir" }

calyx-ir = { version = "0.6.0" }
calyx-frontend = { version = "0.6.0" }
calyx-utils = { version = "0.6.0" }
calyx-opt = { version = "0.6.0" }
calyx-backend = { version = "0.6.0" }
fil-derive = { version = "0.1.0", path = "fil-derive" }

[workspace.dependencies.env_logger]
version = "0.9"
features = ["termcolor", "atty"]
default-features = false

[workspace.dependencies.codespan-reporting]
version = "0.11"
features = ["ascii-only"]

[workspace.dependencies.string-interner]
version = "0.14"
features = ["backends", "std", "inline-more"]

[workspace.dependencies.bitvec]
version = "1.0.1"
features = ["alloc"]


# ================= Package configuration ====================
[package]
name = "filament"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
homepage.workspace = true
categories.workspace = true
readme.workspace = true
rust-version.workspace = true

[dependencies]
argh.workspace = true
log.workspace = true
pest.workspace = true
pest_consume.workspace = true
pest_derive.workspace = true
linked_hash_set.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
derivative.workspace = true
smallvec.workspace = true
topological-sort.workspace = true
atty.workspace = true
lazy_static.workspace = true
easy-smt.workspace = true
struct-variant.workspace = true
env_logger.workspace = true
codespan-reporting.workspace = true
bitvec.workspace = true
string-interner.workspace = true
fil-ast.workspace = true
fil-ir.workspace = true
fil-utils.workspace = true

calyx-ir.workspace = true
calyx-frontend.workspace = true
calyx-utils.workspace = true
calyx-opt.workspace = true
calyx-backend.workspace = true
