[package]
name = "fil-gen"
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
serde = "1.0"
toml = "0.8"
argh.workspace = true
