[package]
name = "fil-ir"
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
itertools.workspace = true
smallvec.workspace = true
topological-sort.workspace = true
lazy_static.workspace = true
codespan-reporting.workspace = true
bitvec.workspace = true
struct-variant.workspace = true

fil-derive.workspace = true
fil-utils.workspace = true
fil-ast.workspace = true
