[package]
name = "fil-ast"
authors.workspace = true
license-file.workspace = true
keywords.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true
categories.workspace = true
homepage.workspace = true
edition.workspace = true
version.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log.workspace = true
itertools.workspace = true
linked-hash-map.workspace = true
lazy_static.workspace = true
struct-variant.workspace = true
pest.workspace = true
pest_consume.workspace = true
strum_macros.workspace = true
strum.workspace = true

fil-utils.workspace = true
fil-gen.workspace = true